# autonomous-navigation-obs-avoidance

./: README.md  package.xml  setup.cfg  setup.py
config/: patrol_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/simple_navigation_project/lib/simple_navigation_project/: obstacle_avoider
install/simple_navigation_project/share/simple_navigation_project/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: patrol_robot.launch.py
log/: latest_build
simple_navigation_project/: CMakeLists.txt  package.xml  patrol_controller.py  setup.cfg  setup.py
simple_navigation_project/config/: nav2_params.yaml
simple_navigation_project/launch/: nav2_bringup.launch.py  nav2_simple.launch.py  simple_navigation.launch.py
simple_navigation_project/simple_navigation_project/: obstacle_avoider.py  simple_navigator.py
test/: test_copyright.py  test_flake8.py  test_pep257.py
